--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: HARD2SAY
-email: henyihanwobushi@example.com
+email: henyihanwobushi@gmail.com
+author: Donsen Hong
 description: >- # this means to ignore newlines until "baseurl:"
   这世界混乱且疯狂，有些事，很难讲。
 baseurl: "" # the subpath of your site, e.g. /blog
